# locke

./: .gitignore  .gitmodules  CMakeLists.txt  CNAME  LICENSE.txt  README.md  _config.yml  index.md
cmake/: Debug.cmake  Libraries.cmake
compiler/: CMakeLists.txt
compiler/src/: main.cpp
example/: HelloWorld.locke
spec/: About.md  External code.md  Files.md  Functions.md  Lexing.md  Naming.md  Parsing.md  Variables.md
spec/1/: Functions.md  Lexing.md  Naming.md  Spec.md  Variables.md
spec/1/Lexing/: Keywords.md  Operators.md
spec/Lexing/: Keywords.md  Operators.md
spec/Parsing/: Keywords.md  Operators.md
